[project]
name = "eli5"
version = "0.11.1"
description = "Debug machine learning classifiers and explain their predictions"
readme = "README.rst"
requires-python = ">= 3.4, < 3.11"
license = {file = "LICENSE.txt"}

authors = [
    {name = "Mikhail Korobov", email = "kmike84@gmail.com"},
    {name = "Konstantin Lopuhin", email = "kostia.lopuhin@gmail.com"},
]
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "attrs > 16.0.0",
    "jinja2",
    "numpy >= 1.9.0",
    "scipy",
    "six",
    "scikit-learn < 1.0; python_version < '3.7'",
    "scikit-learn >= 1.0; python_version >= '3.7'",
    "scikit-learn >= 1.4; python_version >= '3.9'",
    "graphviz",
    "tabulate>=0.7.7",
]

[project.urls]
Homepage = "https://github.com/TeamHG-Memex/eli5"
Documentation = "https://eli5.readthedocs.io/en/latest/"
Repository = "https://github.com/TeamHG-Memex/eli5"
"Repository Fork" = "https://github.com/Arist0craft/eli5"
Issues = "https://github.com/TeamHG-Memex/eli5/issues"

[dependency-groups]
dev = [
    "jupyter >= 1.1.1",
    "ipython >= 7.3.0; python_version >= '3.5'"
]

[tool.setuptools.packages.find]
include = ["eli5*"]
exclude = ["docs*", "tests*", "notebooks*"]